deploy/deployment.yaml
#@ load("@ytt:data", "data")
---
apiVersion: v1
kind: Namespace
metadata:
  name: issues2stories
  labels:
    name: issues2stories
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: issues2stories
  namespace: issues2stories
  labels:
    app: issues2stories
spec:
  replicas: 1
  selector:
    matchLabels:
      app: issues2stories
  template:
    metadata:
      labels:
        app: issues2stories
    spec:
      containers:
        - name: issues2stories
          image: #@ data.values.container_image
          imagePullPolicy: Always
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config
      volumes:
        - name: config-volume
          configMap:
            name: issues2stories-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: issues2stories
  namespace: issues2stories
  labels:
    app: issues2stories
spec:
  type: NodePort
  selector:
    app: issues2stories
  ports:
    - protocol: TCP
      port: 60000
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: issues2stories
  namespace: issues2stories
  annotations:
    kubernetes.io/ingress.class: gce #! External load balancer
    kubernetes.io/ingress.allow-http: "false" #! Turn off http. Must be the string "false" (not the boolean).
    networking.gke.io/managed-certificates: issues2stories #! Name of ManagedCertificate above.
    #! Static IP must defined in advance here: https://console.cloud.google.com/networking/addresses/list
    kubernetes.io/ingress.global-static-ip-name: #@ data.values.ingress_global_static_ip_name
spec:
  backend:
    serviceName: issues2stories
    servicePort: 60000
